@@ -477,6 +477,12 @@ RL.SHADER_LOC_MAP_IRRADIANCE=23
 RL.SHADER_LOC_MAP_PREFILTER=24
 ---Shader location: sampler2d texture: brdf
 RL.SHADER_LOC_MAP_BRDF=25
+---Shader location: vertex attribute: boneIds
+RL.SHADER_LOC_VERTEX_BONEIDS=26
+---Shader location: vertex attribute: boneWeights
+RL.SHADER_LOC_VERTEX_BONEWEIGHTS=27
+---Shader location: array of matrices uniform: boneMatrices
+RL.SHADER_LOC_BONE_MATRICES=28
 ---Shader location: sampler2d texture: diffuce (same as: SHADER_LOC_MAP_ALBEDO)
 RL.SHADER_LOC_MAP_DIFFUSE=15
 ---Shader location: sampler2d texture: specular (same as: SHADER_LOC_MAP_METALNESS)
@@ -1320,6 +1326,22 @@ RL.RL_BLEND_DST_ALPHA=32970
 RL.RL_BLEND_SRC_ALPHA=32971
 ---GL_BLEND_COLOR
 RL.RL_BLEND_COLOR=32773
+---GL_READ_FRAMEBUFFER
+RL.RL_READ_FRAMEBUFFER=36008
+---GL_DRAW_FRAMEBUFFER
+RL.RL_DRAW_FRAMEBUFFER=36009
+
+-- Defines - RLGL Default shader vertex attribute locations
+
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION=0
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD=1
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL=2
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR=3
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT=4
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2=5
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_INDICES=6
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_BONEIDS=nil
+RL.RL_DEFAULT_SHADER_ATTRIB_LOCATION_BONEWEIGHTS=nil
 
 -- Defines - RLGL GlVersion
 
