@@ -1,10 +1,1 @@
-CMakeCache.txt
-cmake_install.cmake
-Makefile
-CMakeFiles
-ReiLua
-resources
-ReiLua.data
-ReiLua.html
-ReiLua.js
-ReiLua.wasm
+*
